[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/World.gd" type="Script" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Document.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/GuardPath.tscn" type="PackedScene" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 30 )

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="Documents" type="Node2D" parent="."]

[node name="Document" parent="Documents" instance=ExtResource( 3 )]
position = Vector2( 99.028, 232.325 )

[node name="Document2" parent="Documents" instance=ExtResource( 3 )]
position = Vector2( 762.754, 93.8651 )

[node name="Document3" parent="Documents" instance=ExtResource( 3 )]
position = Vector2( 499.007, 545.623 )

[node name="Exit" type="Area2D" parent="." groups=[
"exit",
]]
position = Vector2( 914, 67 )

[node name="Sprite" type="Sprite" parent="Exit"]
modulate = Color( 1, 0.984314, 0, 1 )
scale = Vector2( 1.03125, 1.15625 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 976.949, 558.31 )

[node name="Guard1" parent="." instance=ExtResource( 4 )]

[node name="ActionPoints" type="Node2D" parent="."]
[connection signal="area_entered" from="Player" to="." method="_on_Player_area_entered"]
[connection signal="player_seen" from="Guard1" to="." method="_on_player_seen"]
